--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -470,7 +470,7 @@ data-ad-slot="3830899615">
   <br>Phần dưới của trang tính dùng để dự tính mức lương hưu nhận từ Bảo hiểm Xã hội. Hãy bấm vào dòng in đậm ngay sau đây để xem chi tiết.
   <br>Nếu bạn có các hợp đồng bảo hiểm nhân thọ sẽ đáo hạn khi đến tuổi về hưu, hoặc bạn dự định sẽ bán nhà khi về hưu, tức là bạn đã có sẵn một phần của B14. Hãy ghi tổng các khoản sẽ có vào ô đó.
   <br>Ô B15 ghi số tiền bạn muốn để lại khi chấm dứt cuộc đời. Nếu bạn có bất động sản để lại thì không cần để lại nhiều tiền.
-  <br><span class="tmark">Chương trình sẽ tính ra trong ô B16 số tiền bạn cần có lúc bắt đầu về hưu.</span></p>
+  <br><span class="tmark">Chương trình sẽ tính ra trong ô B16 số tiền bạn cần có lúc bắt đầu về hưu. Nếu trong ô B16 có chữ <b>Loading</b> thì bạn hãy bấm <b>Ctrl+R</b> để tải lại trang này.</span></p>
   <amp-accordion>
   <section>
   <h4 class="accordion-header">Dự tính mức lương hưu nhận từ Bảo hiểm Xã hội (bấm vào đây để xem chi tiết)</h4>
