--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -121,6 +121,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 </style>
 <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+<script src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.mjs" async="" custom-element="amp-auto-ads" type="module" crossorigin="anonymous"></script>
+<script async nomodule src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js" crossorigin="anonymous" custom-element="amp-auto-ads"></script>
 </head>
 
 <body>
