--- a/testcounter.html
+++ b/testcounter.html
@@ -61,7 +61,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {text-align:center;color:#ffe033;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:"Sans Forgetica"}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
