--- a/testcounter.html
+++ b/testcounter.html
@@ -54,7 +54,7 @@ amp-sidebar {
 div.mwidth {max-width:1004px;margin: auto;}
 
 body {background-color:dimgray;}
-div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:gainsboro;background-color:black;font-family:"Comic Sans", sans-serif}
+div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:gainsboro;background-color:black;font-family:"Comic Sans MS", sans-serif}
 div.title {text-align:center;font-size:160%;font-weight:bold;color:#ffe033;font-family:serif}
 div.right {text-align:right;}
 div.lrsp {margin: 0px 5px 0px 5px;}
