--- a/testcounter.html
+++ b/testcounter.html
@@ -159,9 +159,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 
 </style>
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 </head>
 
 <body>
+<amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
   <!-- top of body -->
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
@@ -327,19 +329,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 <amp-analytics>
   <script type="application/json">
     {
