--- a/huu-ich/ke-hoach-tai-chinh/huu-tri.html
+++ b/huu-ich/ke-hoach-tai-chinh/huu-tri.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Tính số tiền cần có để được về hưu của gia đình. Có thể về hưu sớm khi đã có đủ số tiền. Nếu không có đũ tiền thì khi về già vẫn phải đi kiếm tiền." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, kế hoạch, hưu trí">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/huu-tri">
-<link rel="canonical" hreflang="vi" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/huu-tri">
+<link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/huu-tri">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
@@ -151,6 +151,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
