--- a/huu-ich/ke-hoach-tai-chinh/khtc1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtc1.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Hướng dẫn lập kế hoạch tài chính gia đình. Công cụ giải quyết nhiều bài toán khó trong tài chính gia đình." />
 <meta name="keywords" content="hữu ích, kế hoạch, tài chính, gia đình, tích luỹ, hưu trí, tuổi già">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/khtc1">
-<link rel="canonical" hreflang="vi" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/khtc1">
+<link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/khtc1">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
@@ -163,6 +163,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
