--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tích-luỹ tài-sản</title>
+<title>Tích-luỹ tài-sản cho tuổi già</title>
 <meta name="description" content="Mỗi người đều phải có một số tiền rất lớn để dùng khi về già. Cách chắc chắn nhất để có số tiền đó là tích luỹ từ sớm." />
 <meta name="keywords" content="hữu ích, tài chính, tích luỹ, hưu trí, tuổi già">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tich-luy">
@@ -221,7 +221,7 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>Tích-luỹ tài-sản</h1>
+  <h1>Tích-luỹ tài-sản cho tuổi già</h1>
   <div class="right">Viết lần đầu trong Tháng Mười Một, 2012</div>
   <div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div><amp-img alt="Không dễ để có đủ tiền sống khi về già!" src="/images/retirementLadder.jpg" width="400" height="400" layout="responsive"></amp-img></div>
   <p>Xã hội Việt Nam có truyền thống "Trẻ cậy cha, già cậy con". Khi còn nhỏ thì được cha mẹ nuôi nấng, chu cấp cho ăn học; đến khi trưởng thành thì chu cấp trở lại cho cha mẹ già.</p>
