--- a/huu-ich/tien-thuong-cuoi-nam.html
+++ b/huu-ich/tien-thuong-cuoi-nam.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tiền thưởng cuối năm</title>
+<title>Một cách hay hơn để doanh nghiệp chia tiền thưởng cuối năm</title>
 <meta name="description" content="Cuối năm doanh nghiệp thưởng như thế nào và nhân viên dùng tiền thưởng thế nào thì có lợi" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiền thưởng, tết">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -220,7 +221,7 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>Tiền thưởng cuối năm</h1>
+  <h1>Một cách hay hơn để doanh nghiệp chia tiền thưởng cuối năm</h1>
   <div class="right">Viết lần đầu trong Tháng Giêng, 2014</div>
   <p>Bài này giới thiệu một cách dùng tiền thưởng cuối năm cho có lợi.</p>
   <h2>Những vấn đề</h2>
