--- a/kinh-nghiem/may-tinh/cloudstorage.html
+++ b/kinh-nghiem/may-tinh/cloudstorage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Giữ file trong nhiều máy và nhiều Cloud Storage</title>
+<title>Cách giữ file trong nhiều máy và nhiều Cloud Storage</title>
 <meta name="description" content="Giữ file trong nhiều máy và nhiều Cloud Storage sao cho an toàn và không bị rối loạn" />
 <meta name="keywords" content="cloud storage, smartphone, picture, hình, backup">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/cloudstorage">
@@ -222,7 +222,7 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
-  <h1>Giữ file trong nhiều máy và nhiều Cloud Storage</h1>
+  <h1>Cách giữ file trong nhiều máy và nhiều Cloud Storage</h1>
   <p>Bây giờ đa số người ta đều có một thứ tài sản đặc biệt cần giữ là các file: file hình/video chụp bằng camera/phone, file nhạc để nghe bằng phone/computer, tài liệu soạn ra khi làm việc và ghi chép cá nhân… Các file đó được tạo ra và giữ trong thẻ nhớ, USB drive, ổ đĩa cứng… và chúng rất dễ bị mất đi vì vật chứa bị hư bất ngờ hoặc người chủ lỡ tay xoá mất.</p>
   <h2>Backup</h2>
   <p>Từ vài chục năm trước, những người dùng máy tính cẩn thận đều định kỳ làm một việc quan trọng là backup, chép các file cần giữ sang một hoặc nhiều vật chứa khác, giữ nhiều bản sao ở các ngày khác nhau, thậm chí những bản sao đó còn được đem đi cất ở toà nhà khác hoặc địa phương khác để lỡ khi hoả hoạn hay thiên tai xảy ra thì không bị mất tất cả các bản sao. Ban đầu, dân máy tính chuyên nghiệp sao chép các file ra băng từ. Chép file vào băng từ và đọc từ băng ra chậm hơn đọc từ đĩa cứng rất nhiều nhưng băng từ rẻ hơn đĩa cứng nhiều lần nên có thể dùng để sao chép nhiều bản mà không quá tốn kém. Dân không chuyên thì không có ổ đọc/ghi băng và cũng không cần chép file ra nhiều bản nên đã chép ra đĩa mềm, rồi CD-Recordable, CD-Rewritable, DVD-Recordable, DVD-Rewritable rồi USB drive hoặc portable hard drive.</p>
