--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bảo vệ tài sản trong thời đại số hoá</title>
+<title>Cách bảo vệ tài sản trong thời đại số hoá</title>
 <meta name="description" content="Bảo vệ tài sản trong thời đại số hoá" />
 <meta name="keywords" content="hữu ích, ngân hàng, cá nhân, password, OTP">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/protect">
@@ -222,7 +222,7 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
-  <h1>Bảo vệ tài sản trong thời đại số hoá</h1>
+  <h1>Cách bảo vệ tài sản trong thời đại số hoá</h1>
 <div class="right">Viết lần đầu trong Tháng Ba, 2020.</div>
 <h2>Tài sản trong thời đại số hoá có gì khác?</h2>
 <p>Thời nay đa số người ta đều có một thứ tài sản đặc biệt cần giữ là các file: file hình/video chụp bằng camera/phone, file nhạc để nghe bằng phone/computer, tài liệu soạn ra khi làm việc và ghi chép cá nhân… Mặc dù cách dùng các file đó khác nhau nhưng bên trong mỗi file chỉ chứa toàn các số 0 và 1 cho nên chúng ta gọi đó là <b>tài sản số hoá</b>. Những tài sản số hoá đều có một giá trị vật chất hoặc tinh thần nào đó. Chúng có giá trị vật chất khi chúng ta có thể bán, cho thuê, ví dụ như bán những tấm hình đẹp, cho người ta xem những video clip để thu tiền quảng cáo… Một vài loại tài sản số hoá có giá trị vật chất rất cụ thể là tài khoản ngân hàng, ví điện tử, giá trị của những tài sản này bằng số tiền có trong tài-khoản hoặc ví.
