--- a/huu-ich/dau-tu-co-phieu/maxx-pltv.html
+++ b/huu-ich/dau-tu-co-phieu/maxx-pltv.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Quỹ đầu tư Maxx - Phúc Lộc Thịnh Vượng, bảo hiểm nhân thọ sinh lời cao trong dài hạn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/maxx-pltv">
-<link rel="canonical" hreflang="vi" href="https://lehboi.github.io/huu-ich/dau-tu-co-phieu/maxx-pltv">
+<link rel="canonical" href="https://lehboi.github.io/huu-ich/dau-tu-co-phieu/maxx-pltv">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
