--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -340,7 +340,28 @@ data-ad-slot="5275186684">
   <h1>Lập kế hoạch tài chính gia đình</h1>
   <div class="right">(<a href="https://lehboi.github.io/en/fa/pfr/pfr1">English</a>)</div>
   <div class="right">Viết lần đầu trong Tháng Hai, 2019.</div>
-  <h2>Giai đoạn tích luỹ đầu tư</h2>
+  <h2>Dàn bài</h2>
+  <blockquote>
+    <a href="#intro">Giới thiệu</a>
+    <blockquote>
+      <a href="#method">Phương pháp tính</a>
+      <br><a href="#pages">Các trang của bảng tính</a>
+    </blockquote>
+    <a href="#steps">Các bước thực hiện</a>
+    <blockquote>
+      <a href="#copy">Chép bảng tính KHTCp1, đọc trang Hướng-dẫn</a>
+      <br><a href="#tt-chung">Nhập các thông tin chung</a>
+      <br><a href="#quy-huu">Tính quỹ hưu trí</a>
+      <br><a href="#tra-gop">Liệt kê các khoản trả góp nhiều năm</a>
+      <br><a href="#muc-tieu">Liệt kê các mục tiêu tài chính</a>
+      <br><a href="#bao-hiem">Tính các khoản bảo hiểm</a>
+      <br><a href="#chu-y">Chú ý</a>
+      <br><a href="#lo-trinh">Xem và điều chỉnh lộ trình</a>
+    </blockquote>
+    <a href="#pdca">Plan-Do-Check-Act</a>
+    <br><a href="#mo-hinh">Các mô hình</a>
+  </blockquote>
+  <h2 id="intro">Giai đoạn tích luỹ đầu tư</h2>
   <p>Bạn đang làm ra tiền để chi tiêu trước mắt và tích luỹ cho các mục tiêu trong tương lai như mua nhà, mua xe, quỹ hưu trí…
   <br>Đây là công cụ tính toán giúp bạn tìm ra một lộ trình tối ưu để lần lượt đi qua những mục tiêu trên một cách êm ái nhất, tránh những lúc ép ga, tăng tốc gây mệt mỏi. Với công cụ này, bạn giữ tỷ lệ giữa chi tiêu trước mắt và tích luỹ ít thay đổi trong suốt lộ trình tài chính, đến khi đạt được mục tiêu sau cùng là ngừng kiếm tiền và bắt đầu hưởng thụ cuộc sống an nhàn.
   <br>Cuộc sống luôn luôn thay đổi, lộ trình tài chính của mỗi người cũng sẽ thay đổi theo. Với công cụ này, bạn sẽ nhanh chóng vẽ lại lộ trình để thích nghi với những thay đổi như là thu nhập, lạm phát, lợi nhuận đầu tư thay đổi theo tình hình kinh tế vĩ mô.</p>
@@ -348,7 +369,7 @@ data-ad-slot="5275186684">
   <div><amp-img alt="Lộ trình tài chính" src="/images/phuongphap.svg" width="957" height="496" layout="responsive"></amp-img></a></div>
   <amp-accordion>
   <section>
-  <h3 class="accordion-header">Phương pháp tính (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header" id="method">Phương pháp tính (bấm vào đây để xem chi tiết)</h3>
   <div>
   <p>Phương pháp tính ở đây dựa trên các nguyên tắc rất đơn giản:</p>
   <ul>
@@ -395,7 +416,7 @@ data-ad-slot="3830899615">
 
   <amp-accordion>
   <section>
-  <h3 class="accordion-header">Bảng tính KHTCp1 gồm có các trang (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header" id="pages">Bảng tính KHTCp1 gồm có các trang (bấm vào đây để xem chi tiết)</h3>
   <ul>
     <li>Hướng-dẫn: những ghi chú quan trọng</li>
     <li>TT-chung: những thông số để dùng chung trong các trang còn lại</li>
@@ -412,7 +433,7 @@ data-ad-slot="3830899615">
   <h2 id="steps">Hãy lập kế hoạch theo các bước sau</h2>
   <amp-accordion>
   <section>
-  <h3 class="accordion-header">Chép bảng tính KHTCp1, đọc trang Hướng-dẫn (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header" id="copy">Chép bảng tính KHTCp1, đọc trang Hướng-dẫn (bấm vào đây để xem chi tiết)</h3>
   <div>
   <p>Bấm vào <a href="https://docs.google.com/spreadsheets/d/1R-RledWJqlMJEzR294JBZnekYwjbNliwg1EQN1Wraqg/edit?usp=sharing" target="_blank">đây</a> rồi chọn menu <b>Tệp→Tạo một bản sao</b> hoặc <b>File→Make a copy</b> để chép về Google Drive của bạn, <i>chú ý</i>: dùng menu dưới chữ <b>KHTCp1</b> trong cửa sổ chương trình duyệt web, đừng dùng menu của chương trình duyệt web, đừng download về dùng với Excel vì trong KHTCp1 có một số hàm tôi tự viết, Excel không thể chạy những hàm đó. Nếu bạn mở KHTCp1 bằng Google Sheet app trên smartphone thì bạn dùng menu <b>⋮→Share &amp; export</b> để <b>Make a copy</b>.
 Bạn hãy đổi tên file thành KHTCyyyymm, theo tháng bắt đầu kế hoạch.</p>
@@ -570,12 +591,12 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
   </section>
   </amp-accordion>
 
-  <h3>Các khoản chi để được bảo hiểm</h3>
+  <h3 id="bao-hiem">Các khoản chi để được bảo hiểm</h3>
   <p>Chúng ta cần chi một ít tiền để bảo đảm có tiền tiếp tục thực hiện những kế hoạch trên khi có rủi ro bất ngờ xảy ra như tai nạn, bệnh nghiêm trọng… <span class="tmark">Tổng số tiền bảo hiểm cần có phải lớn hơn tổng các mục tiêu tài chính chưa hoàn thành trừ đi tổng tài sản đầu tư đang có.</span>
   <br>Những người làm ra tiền trong gia đình là những người cần được bảo hiểm trước tiên.
   <br>Số tiền đóng bảo hiểm nên được xem như là chi phí hơn là số tiền tích luỹ cho tương lai. Sản phẩm bảo hiểm nên dùng là loại bảo hiểm có số tiền bảo hiểm cao và mức phí thấp như <a href="../cac-loai-bao-hiem/bhnt-lien-ket-chung">bảo hiểm nhân thọ liên kết chung</a>, số tiền bảo hiểm cao gấp hàng ngàn lần số tiền đóng phí hàng tháng.</p>
 
-  <h3>Chú ý</h3>
+  <h3 id="chu-y">Chú ý</h3>
   <p>Bạn nên bắt đầu lập kế hoạch với các mục tiêu nhỏ, dễ thực hiện; và nâng các mục tiêu lên cao hơn sau một thời gian thực hiện. Ví dụ: bắt đầu với mục tiêu mua nhà nhỏ ở xa trung tâm, cho con học đại học công.</p>
   <p>Bạn hãy chú ý rằng các trang này có liên quan chặt chẽ với nhau. Ví dụ:</p>
   <ul>
@@ -594,6 +615,7 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
     <li>Xô tiền tiết kiệm dài hạn hoặc quỹ đầu tư trái phiếu đựng số tiền sắp chi trong 5 năm tới,</li>
     <li>Xô quỹ đầu tư cổ phiếu hoặc bất động sản đựng số tiền cho thời gian xa hơn 5 năm, quỹ đầu tư cổ phiếu cần có thời gian đủ dài để sinh lời ổn định.</li>
   </ol>
+  <p>Các xô tiền đó sinh lời ở các mức khác nhau. Nếu bạn đang tích luỹ tiền cho mục tiêu gần hơn 5 năm thì bạn gửi tiền vào xô thứ hai và bạn không thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>. Nếu bạn đã tích luỹ đủ cho những mục tiêu gần hơn 5 năm thì bạn hãy chuyển số tiền sắp dùng cho những mục tiêu đó vào xô thứ hai và tiếp tục gửi tiền vào xô thứ ba và bạn có thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>.
 
 
 <!-- AMP In-article 1 -->
@@ -645,7 +667,7 @@ data-ad-slot="3830899615">
 
   <p>Bảng tính này chỉ dùng để lập kế hoạch; khi đã có kế hoạch khả thi nhất, để theo dõi việc thực hiện kế hoạch hàng ngày bạn nên dùng phần mềm <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> và file spreadsheet <a href="dau-tu-dai-han">ĐTDH</a>.</p>
 
-  <h3>Plan-Do-Check-Act</h3>
+  <h2 id="pdca">Plan-Do-Check-Act</h2>
   <p>Các tính toán trong bảng tính này dựa trên các yếu tố sẽ thay đổi theo thời gian như là lãi suất, lạm phát, thu nhập và chi tiêu của gia đình bạn. Do đó bạn cần điều chỉnh kế hoạch của mình mỗi khi có thay đổi.
   <br>Hãy nhớ chép bảng tính ra một bản để lưu trước khi thay đổi, ví dụ: ngày 1.1.2020, chép file KHTC201906 thành file KHTC202001 và sửa file KHTC202001. Việc cập nhật kế hoạch nên làm ít nhất một lần mỗi năm, bắt đầu từ trang TT-chung rồi đến các trang Trả-góp, Mục-tiêu, Bảo-hiểm.</p>
   <p>Bạn cần phải đánh giá lại lợi nhuận trung bình của tổng tài sản trong thời gian qua để điều chỉnh vào bản kế hoạch mới. Để tính lợi nhuận trung bình thì bạn cần dùng bảng tính trong trang <a href="../hieu-qua-dau-tu">Tính hiệu quả của việc đầu tư</a>.</p>
@@ -680,7 +702,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <h2>Các kịch bản</h2>
+  <h2 id="mo-hinh">Các mô hình</h2>
   <h3>Đầy đủ các mục tiêu</h3>
   <p>Bạn muốn thực hiện đầy đủ công thức 1 vợ/chồng - 2 con - 3 tầng - 4 bánh. Bạn sẽ giữ tất cả các dòng trong file mẫu, chỉ cần thay đổi chi tiết của mỗi dòng.
   <br>Sau khi mua căn nhà đầu tiên, bạn có thể đổi sang căn nhà lớn hơn. Bạn sẽ cập nhật lại file kế hoạch trước và sau mỗi lần đổi nhà.
